--- a/example/start-axum/style/main.scss
+++ b/example/start-axum/style/main.scss
@@ -1,13 +1,11 @@
 body {
   font-family: sans-serif;
-  text-align: center;
 }
 
-.post {
+.container {
   display: flex;
-  width: 50rem;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.75rem;
   margin: auto;
 }
 
@@ -17,4 +15,9 @@ body {
   flex-direction: column;
   gap: 1rem;
   border: red 1px solid;
+}
+
+.button {
+  width: 10rem;
+  height: 3rem;
 }
