--- a/devtools/src/styles.css
+++ b/devtools/src/styles.css
@@ -1,4 +1,7 @@
 .leptos-query-devtools {
+  .pointer-events-none {
+    pointer-events: none;
+  }
   .fixed {
     position: fixed;
   }
@@ -7,6 +10,10 @@
   }
   .relative {
     position: relative;
+  }
+  .inset-y-0 {
+    top: 0px;
+    bottom: 0px;
   }
   .bottom-0 {
     bottom: 0px;
@@ -20,20 +27,17 @@
   .right-0 {
     right: 0px;
   }
-  .right-2 {
-    right: 0.5rem;
-  }
   .right-5 {
     right: 1.25rem;
-  }
-  .top-2 {
-    top: 0.5rem;
   }
   .z-\[1000\] {
     z-index: 1000;
   }
   .m-0 {
     margin: 0px;
+  }
+  .block {
+    display: block;
   }
   .flex {
     display: flex;
@@ -53,6 +57,9 @@
   .h-10 {
     height: 2.5rem;
   }
+  .h-4 {
+    height: 1rem;
+  }
   .h-8 {
     height: 2rem;
   }
@@ -71,11 +78,20 @@
   .w-10 {
     width: 2.5rem;
   }
+  .w-4 {
+    width: 1rem;
+  }
+  .w-72 {
+    width: 18rem;
+  }
   .w-8 {
     width: 2rem;
   }
   .w-full {
     width: 100%;
+  }
+  .w-3\/4 {
+    width: 75%;
   }
   .flex-1 {
     flex: 1 1 0%;
@@ -88,6 +104,9 @@
   }
   .flex-col {
     flex-direction: column;
+  }
+  .items-start {
+    align-items: flex-start;
   }
   .items-center {
     align-items: center;
@@ -124,8 +143,8 @@
   .rounded-md {
     border-radius: 0.375rem;
   }
-  .rounded-sm {
-    border-radius: 0.125rem;
+  .border-0 {
+    border-width: 0px;
   }
   .border-2 {
     border-width: 2px;
@@ -160,6 +179,14 @@
     --tw-bg-opacity: 1;
     background-color: rgb(254 226 226 / var(--tw-bg-opacity));
   }
+  .bg-zinc-700 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(63 63 70 / var(--tw-bg-opacity));
+  }
+  .bg-zinc-800 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+  }
   .fill-blue-500 {
     fill: #3b82f6;
   }
@@ -175,8 +202,14 @@
   .p-1 {
     padding: 0.25rem;
   }
+  .p-2 {
+    padding: 0.5rem;
+  }
   .p-4 {
     padding: 1rem;
+  }
+  .p-6 {
+    padding: 1.5rem;
   }
   .px-0 {
     padding-left: 0px;
@@ -194,8 +227,17 @@
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
   }
+  .pl-10 {
+    padding-left: 2.5rem;
+  }
+  .pl-3 {
+    padding-left: 0.75rem;
+  }
   .pr-2 {
     padding-right: 0.5rem;
+  }
+  .pr-3 {
+    padding-right: 0.75rem;
   }
   .text-base {
     font-size: 1rem;
@@ -233,6 +275,27 @@
   .text-red-700 {
     --tw-text-opacity: 1;
     color: rgb(185 28 28 / var(--tw-text-opacity));
+  }
+  .text-zinc-100 {
+    --tw-text-opacity: 1;
+    color: rgb(244 244 245 / var(--tw-text-opacity));
+  }
+  .text-zinc-400 {
+    --tw-text-opacity: 1;
+    color: rgb(161 161 170 / var(--tw-text-opacity));
+  }
+  .placeholder-zinc-400::-moz-placeholder {
+    --tw-placeholder-opacity: 1;
+    color: rgb(161 161 170 / var(--tw-placeholder-opacity));
+  }
+  .placeholder-zinc-400::placeholder {
+    --tw-placeholder-opacity: 1;
+    color: rgb(161 161 170 / var(--tw-placeholder-opacity));
+  }
+  .shadow-md {
+    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
   .filter {
     filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -570,6 +633,25 @@
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
 }
 
+.focus\:ring-2:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-blue-700:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(29 78 216 / var(--tw-ring-opacity));
+}
+
+.focus\:ring-offset-2:focus {
+  --tw-ring-offset-width: 2px;
+}
+
+.focus\:ring-offset-indigo-600:focus {
+  --tw-ring-offset-color: #4f46e5;
+}
+
 @media (min-width: 640px) {
   .sm\:flex {
     display: flex;
@@ -577,5 +659,14 @@
 
   .sm\:inline-flex {
     display: inline-flex;
+  }
+
+  .sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .sm\:leading-6 {
+    line-height: 1.5rem;
   }
 }
