integrated tailwind scoped preflight plugin

--- a/devtools/src/input.css
+++ b/devtools/src/input.css
@@ -1,6 +1,9 @@
-/* @import "./preflight.css" */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.leptos-query-devtools {
-	@tailwind components;
-	@tailwind utilities;
-}
+@layer base {
+	* {
+	  @apply border-border;
+	}
+  }
