apply default border to children

--- a/devtools/src/input.css
+++ b/devtools/src/input.css
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-	* {
-	  @apply border-border;
-	}
-  }
+.leptos-query-devtools * {
+	@apply border-border;
+}
