--- a/devtools/input.css
+++ b/devtools/input.css
@@ -4,11 +4,11 @@
 
 @layer utilities {
     /* Hide scrollbar for Chrome, Safari and Opera */
-    .no-scrollbar::-webkit-scrollbar {
+    .lq-no-scrollbar::-webkit-scrollbar {
         display: none;
     }
     /* Hide scrollbar for IE, Edge and Firefox */
-    .no-scrollbar {
+    .lq-no-scrollbar {
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;  /* Firefox */
     }
